--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 DeadRSX 0.1 Release 
 Author DarkhackerPS3
-
-this is it go to http://www.ps3sdk.com/ for documentation 
-
+V2 Port deroad/Wargio
 
 to Install : --------------------------------------------
 
@@ -13,7 +11,6 @@ to Install : --------------------------------------------
 (step 3) make install
 
 ---------------------------------------------------------
-
 
 then go to samples/ and make anything you like :D
 
